add responsive and objects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-List</title>
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="main.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <h1>Att göra lista!</h1>
         <form>
             <input id="newcontent" type="text" placeholder="Ny uppgift som måste göras!" required>
-            <button id="addnewcontent" type="button">Lägg till!</button>
+            <button id="addnewcontent" type="button">Skapa!</button>
         </form>
         <div id="ulWrapper">
             <div id="filter">
