change varbiable, function and class names

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="wrapper">
         <h1>Att göra lista!</h1>
         <form>
-            <input id="newcontent" type="text" placeholder="Ny uppgift som måste göras!" required>
-            <button id="addnewcontent" type="button">Skapa!</button>
+            <input id="newContent" type="text" placeholder="Ny uppgift som måste göras!" required>
+            <button id="addNewContent" type="button">Skapa!</button>
         </form>
         <div id="ulWrapper">
             <div id="filter">
