add comments and whitespace

--- a/index.html
+++ b/index.html
@@ -18,22 +18,27 @@
             <button id="addNewContent" type="button">Skapa!</button>
         </form>
         <div id="ulWrapper">
+
             <div id="filter">
+
                 <div id="sort">
                     <span>Sortera</span>
                 </div> 
+
                 <div id= "openMenu">
                     <span>Filtrera</span>
                 </div>
+
                 <div id="dropdownFilter" class="closed">
                     <button type="button" id="standard" class="filterButtons">Standard</button>
                     <button type="button" id="checked" class="filterButtons">Avklarade</button>
                     <button type="button" id="undone" class="filterButtons">Oavslutade</button>
                     <button type="button" id="removed" class="filterButtons">Borttagna</button>
                 </div>
+
             </div>
-            <ul id="myTodoList" class="list">
-            </ul>
+
+            <ul id="myTodoList" class="list"></ul>
         </div>
     </div>  
 </body>
