--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-List</title>
 
-    <link rel="stylesheet" href="dist/main.min.css">
+    <link rel="stylesheet" href="css/dist/main.min.css">
     <script src="main.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
