fix comments and add meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Min todolista för inlämningsuppgift 1 i JavaScript grundkurs">
     <title>Todo-List</title>
 
     <link rel="stylesheet" href="css/dist/main.min.css">
